--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <title>Octavio Maury</title>
-  <link href="/home/octaviomaury/codingshit/octaviomauryredesign/Military/themecss.css" rel="stylesheet" type="text/css" media="all">
+  <link href="Military/themecss.css" rel="stylesheet" type="text/css" media="all">
   <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -53,7 +53,7 @@
 	</div>
 
 	<div class="navbox">
-		<div class="navhead">Quote of the Now</div>
+		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
 
