--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<li><a href=" https://octaviomaury.github.io/index.html ">Home</a></li>
           <li><a href=" https://octaviomaury.github.io/cartoons.html ">Cartoons (WIP)</a></li>
 					<li><a href=" https://octaviomaury.github.io/art.html ">Art (WIP)</a></li>
-					<li><a href=" https://octaviomaury.github.io/about.htm ">About</a></li>
+					<li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
 					<li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
 				</ul>
 			</div>
