--- a/about.html
+++ b/about.html
@@ -80,6 +80,7 @@
   					&nbsp;My name is <a href="https://octo.newgrounds.com" target="_new">Octavio "Octo" Maury</a> and I do cartoons sometimes.
             <br>
             <br>
+            &nbsp;I really like retro shooter games, heavy metal and the S.T.A.L.K.E.R. franchise. Cheeki breeki iv damke!
             &nbsp;This website uses a free CSS template from <a href="http://themekings.net/" target="_new">ThemeKings.net</a>
             <br><br>
             &nbsp;I also have my good friends <a href="https://daemonplus.newgrounds.com/" target="_new">Daemon</a> and <a href="https://gage.newgrounds.com/" target="_new">.Gage</a> to thank for making this website not shit.
