--- a/gaylist.html
+++ b/gaylist.html
@@ -81,6 +81,7 @@
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul>
+              <li>Jaden</li>
               <li>Spares</li>
               <li>Konner's Cloud character</li>
               <li>Pico</li>
