--- a/gaylist.html
+++ b/gaylist.html
@@ -81,6 +81,8 @@
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul>
+              <li>Genshin Impact</li>
+              <li>Berlin Wall</li>
               <li>Jaden</li>
               <li>Spares</li>
               <li>Konner's Cloud character</li>
