--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
 <title>404</title>
 <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
-<link rel="stylesheet" href="military/themecss.css">
+<link href="Military/themecss.css" rel="stylesheet" type="text/css" media="all">
 <meta name="description" content="uh oh!">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
