--- a/404.html
+++ b/404.html
@@ -3,21 +3,20 @@
 <head>
 <title>404</title>
 <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
-<link href="Military/themecss.css" rel="stylesheet" type="text/css" media="all">
+<link rel="stylesheet" href="military/themecss.css">
 <meta name="description" content="uh oh!">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-<!--lmao thanks andy-->
+<!--lmao thanks Andy-->
 
 </br></br>
-
 <div align="center"
 <u><h1>404</h1></u>
 <img src="images/fallout2.jpg">
 
-<p>Fake and gay!!!<p>
+<p>Fake and gay!!!.<p>
 
 <a href="https://octaviomaury.github.io"><p class="bottom">Home</a>
 </div>
