--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 </br></br>
 <div align="center"
 <u><h1>404</h1></u>
-<img src="images/fallout2.jpg">
+<img src="images/fallout2.jpg" height="250">
 
 <p>Fake and gay!!!.<p>
 
