--- a/404.html
+++ b/404.html
@@ -3,17 +3,18 @@
 <head>
 <title>404</title>
 <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
-<link rel="stylesheet" href="military/themecss.css">
+<link rel="stylesheet" href="themecss.css">
 <meta name="description" content="uh oh!">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-<!--lmao thanks Andy-->
+
 
 </br></br>
 <div align="center"
 <u><h1>404</h1></u>
+<img src="images/fallout2.jpg">
 
 <p>Fake and gay!!!.<p>
 
