--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <title>Octavio Maury</title>
-  <link href="Military/themecss.css" rel="stylesheet" type="text/css" media="all">
+  <link href="military/themecss.css" rel="stylesheet" type="text/css" media="all">
   <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
