--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 		<div class="navfill">
 			<div class="navinfo">
 
-				&nbsp;Welcome to my new home <br>&nbsp;on the web!
+				&nbsp;You ever hear of Quake?
 				<br>
 				<br>
 				<br>
@@ -88,8 +88,9 @@
             &nbsp;I also have my good friends <a href="https://daemonplus.newgrounds.com/" target="_new">Daemon</a> and <a href="https://gage.newgrounds.com/" target="_new">.Gage</a> to thank for making this website not shit.
             <br><br>
             &nbsp; <img src="images/daemonpfp.png" height="150"> <img src="images/gagedefeated.png" height="150">
+            <br><br>
+            <br
   					</div>
-  				<div class="topicsignature">Octo-</div>
   			</div>
   		<div class="topicfoot"></div>
   	</div>
