--- a/gaylist.html
+++ b/gaylist.html
@@ -57,7 +57,7 @@
 		<div class="navfill">
 			<div class="navinfo">
 
-				&nbsp;Welcome to my new home <br>&nbsp;on the web!
+				&nbsp;You ever hear of Quake?
 				<br>
 				<br>
 				<br>
@@ -76,11 +76,13 @@
 
   <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Things I Think Are Gay - 2021.30.4</div>
+  			<div class="topictitle">Things I Think Are Gay - 2021.1.5</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul>
+              <li>Facebook</li>
+              <li>LeviRamirez</li>
               <li>Genshin impact</li>
               <li>Berlin Wall</li>
               <li>Jaden</li>
