--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div class="navfill">
 			<div class="navinfo">
 
-				&nbsp;Welcome to my new home <br>&nbsp;on the web!
+				&nbsp;You ever hear of Quake?
 				<br>
 				<br>
 				<br>
