--- a/gaylist.html
+++ b/gaylist.html
@@ -24,8 +24,8 @@
 			<div class="nav-menu">
 				<ul>
 					<li><a href=" https://octaviomaury.github.io/index.html ">Home</a></li>
-					<li><a href=" https://octaviomaury.github.io/cartoons.html ">Cartoons (WIP)</a></li>
-					<li><a href=" https://octaviomaury.github.io/art.html ">Art (WIP)</a></li>
+					<li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal (WIP)</a></li>
+					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal (WIP)</a></li>
 					<li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
 					<li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
 				</ul>
