--- a/art.html
+++ b/art.html
@@ -76,40 +76,22 @@
 
   <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Preview to the Art Portal - 2021.1.5</div>
+  			<div class="topictitle">Art Portal - 2021</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
-  					&nbsp;Art Portal coming soon. I'm workin' on it!
-            <br><br>
-            &nbsp;Here's a screenshot of what I got so far in the meantime.
-            <br><br>
-            &nbsp;  <img src="images/artportalsneakpeek.png" height="150">
-            <br><br>
-            &nbsp;Happy Pico Day by the way! Long live Newgrounds!
+  					&nbsp;<a href="https://art.ngfiles.com/images/1707000/1707293_octo_deagle.png?f1616443800" target="_new"><img src="images/artportal/deagleicon.png" height="100"></a>
+            &nbsp;<a href="https://art.ngfiles.com/images/1696000/1696968_octo_what-are-you-gay.gif?f1616003995" target="_new"><img src="images/artportal/whatareyougayicon.png" height="100"></a>
+            &nbsp;<a href="https://art.ngfiles.com/images/1685000/1685754_octo_shambler-quake.gif?f1615492322" target="_new"><img src="images/artportal/shamblericon.png" height="100"></a>
+            &nbsp;<a href="https://art.ngfiles.com/images/1682000/1682731_octo_doom-guy.gif?f1615389546" target="_new"><img src="images/artportal/doomguyicon.png" height="100"></a>
+            &nbsp;<a href="https://art.ngfiles.com/images/1669000/1669464_octo_atomix-icon.gif?f1614646481" target="_new"><img src="images/artportal/atomixiconicon.png" height="100"></a>
+            &nbsp;<a href="https://art.ngfiles.com/images/1630000/1630967_octo_octo-small.png?f1612667495" target="_new"><img src="images/artportal/octosmallicon.png" height="100"></a>
+            <br>  
+            &nbsp;<a href="https://art.ngfiles.com/images/1623000/1623217_octo_fury-gif.gif?f1612279916" target="_new"><img src="images/artportal/furyicon.png" height="100"></a>
+
+
+
   					</div>
-  				<div class="topicsignature">Octo-</div>
-  			</div>
-  		<div class="topicfoot"></div>
-  	</div>
-
-
-
-  <div class="topicmenu">
-  		<div class="toptop">
-  			<div class="topictitle">New Look to Site #winning - 2021.30.4</div>
-  		</div>
-  			<div class="topicmid">
-  				<div class="topicinfo">
-  					&nbsp;Old look was gay and ugly. I found a css. template online, and it had an old-school Newgrounds look and <br> &nbsp;thought it was epic. <br>
-            <br>
-            &nbsp;I'm gonna have more stuff on here soon. Hope you like it, boys.
-            <br><br>
-            &nbsp;And if you don't like the new look, the old one is on the <a href="http://web.archive.org/web/*/https://octaviomaury.github.io/index.html" target="_new">WayBack Machine</a>, so fuck off over there.
-            <br><br>
-            &nbsp;  <img src="images/hacking.gif" height="150">
-  					</div>
-  				<div class="topicsignature">Octo-</div>
   			</div>
   		<div class="topicfoot"></div>
   	</div>
