--- a/gaylist.html
+++ b/gaylist.html
@@ -81,6 +81,17 @@
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul>
+              <li>Coca-Cola</li>
+              <li>Redbull</li>
+              <li>Disney</li>
+              <li>Tumblr</li>
+              <li>Youtube</li>
+              <li>RIAA</li>
+              <li>Metallica</li>
+              <li>Huawei</li>
+              <li>Tencent</li>
+              <li>Operation Barbarosa</li>
+              <li>Madness Combat</li>
               <li>Facebook</li>
               <li>LeviRamirez</li>
               <li>Genshin impact</li>
