--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 		<div class="navfill">
 			<div class="navinfo">
 
-				&nbsp;You ever hear of Quake?
+				&nbsp;"You depend on our <br>&nbsp; protection!"
 				<br>
 				<br>
 				<br>
