--- a/art.html
+++ b/art.html
@@ -57,7 +57,7 @@
 		<div class="navfill">
 			<div class="navinfo">
 
-				&nbsp;You ever hear of Quake?
+				&nbsp;"You depend on our <br>&nbsp; protection!"
 				<br>
 				<br>
 				<br>
@@ -86,7 +86,7 @@
             &nbsp;<a href="https://art.ngfiles.com/images/1682000/1682731_octo_doom-guy.gif?f1615389546" target="_new"><img src="images/artportal/doomguyicon.png" height="100"></a>
             &nbsp;<a href="https://art.ngfiles.com/images/1669000/1669464_octo_atomix-icon.gif?f1614646481" target="_new"><img src="images/artportal/atomixiconicon.png" height="100"></a>
             &nbsp;<a href="https://art.ngfiles.com/images/1630000/1630967_octo_octo-small.png?f1612667495" target="_new"><img src="images/artportal/octosmallicon.png" height="100"></a>
-            <br>  
+            <br>
             &nbsp;<a href="https://art.ngfiles.com/images/1623000/1623217_octo_fury-gif.gif?f1612279916" target="_new"><img src="images/artportal/furyicon.png" height="100"></a>
 
 
