--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div class="navfill">
 			<div class="navinfo">
 
-				&nbsp;You ever hear of Quake?
+				&nbsp;"You depend on our <br>&nbsp; protection!"
 				<br>
 				<br>
 				<br>
@@ -86,7 +86,7 @@
             <br><br>
             &nbsp;  <img src="images/artportalsneakpeek.png" height="150">
             <br><br>
-            &nbsp;Happy Pico Day by the way! Long live Newgrounds!
+            &nbsp;Happy Pico Day, by the way! Long live Newgrounds!
   					</div>
   				<div class="topicsignature">Octo-</div>
   			</div>
