--- a/art.html
+++ b/art.html
@@ -25,7 +25,7 @@
 				<ul>
 					<li><a href=" https://octaviomaury.github.io/index.html ">Home</a></li>
           <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal (WIP)</a></li>
-					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal (WIP)</a></li>
+					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
 					<li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
 					<li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
 				</ul>
