--- a/gaylist.html
+++ b/gaylist.html
@@ -25,7 +25,7 @@
 				<ul>
 					<li><a href=" https://octaviomaury.github.io/index.html ">Home</a></li>
 					<li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal (WIP)</a></li>
-					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal (WIP)</a></li>
+					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
 					<li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
 					<li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
 				</ul>
@@ -81,6 +81,8 @@
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul>
+              <li>Jeff Bezos</li>
+              <li>Amazon</li>
               <li>Coca-Cola</li>
               <li>Redbull</li>
               <li>Disney</li>
