--- a/index.html
+++ b/index.html
@@ -80,6 +80,24 @@
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
+  					&nbsp;The Art Portal is up!
+            <br><br>
+            &nbsp;I'm gonna work on making it fancier over the coming days, and once im done with <i>that</i> I'm gonna get to work on
+            <br> &nbsp;the Movie Portal.
+            <br><br>
+            &nbsp;Cheers.
+  					</div>
+  				<div class="topicsignature">Octo-</div>
+  			</div>
+  		<div class="topicfoot"></div>
+  	</div>
+
+  <div class="topicmenu">
+  		<div class="toptop">
+  			<div class="topictitle">Preview to the Art Portal - 2021.1.5</div>
+  		</div>
+  			<div class="topicmid">
+  				<div class="topicinfo">
   					&nbsp;Art Portal coming soon. I'm workin' on it!
             <br><br>
             &nbsp;Here's a screenshot of what I got so far in the meantime.
