--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
             &nbsp;I'm gonna work on making it fancier over the coming days, and once im done with <i>that</i> I'm gonna get to work on
             <br> &nbsp;the Movie Portal.
             <br><br>
+            &nbsp;The main additions that will be made to the Art Portal are making actual sites for each drawing <i>(Like what
+            <br> &nbsp;Newgrounds does)</i> that will show more info like the date and description
+            instead of the shitty Github links that
+            <br> &nbsp;just open the drawing in a new tab.
+            <br><br>
+            &nbsp;So, stay tuned for that.
+            <br><br>
             &nbsp;Cheers.
   					</div>
   				<div class="topicsignature">Octo-</div>
