--- a/about.html
+++ b/about.html
@@ -6,6 +6,11 @@
   <link href="military/themecss.css" rel="stylesheet" type="text/css" media="all">
   <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+ .colortext {
+   color:#8d8d6A;
+ }
+</style>
 </head>
 
 <div id="bodycontainer">
@@ -80,6 +85,8 @@
   					&nbsp;My name is <a href="https://octo.newgrounds.com" target="_new">Octavio "Octo" Maury</a> and I do cartoons sometimes.
             <br>
             &nbsp;I really like retro shooter games, heavy metal and the S.T.A.L.K.E.R. franchise. Cheeki breeki iv damke!
+            <br><br>
+            &nbsp;If you want to contact me, you can reach me @ <span class="colortext"><i>octaviomaury1@gmail.com</i></span> and <span class="colortext"><i>OctoNG#3832</i></span>
             <br><br>
             &nbsp<img src="images/images/octogorilla.png" height="150">
             <br><br>
