--- a/about.html
+++ b/about.html
@@ -62,10 +62,9 @@
 		<div class="navfill">
 			<div class="navinfo">
 
-				&nbsp;"You depend on our <br>&nbsp; protection!"
-				<br>
-				<br>
-				<br>
+				&nbsp;It's the Gummibär album <br>&nbsp;cover!
+				<br><br>
+
 
 			</div>
 		</div>
@@ -88,7 +87,7 @@
             <br><br>
             &nbsp;If you want to contact me, you can reach me @ <span class="colortext"><i>octaviomaury1@gmail.com</i></span> and <span class="colortext"><i>OctoNG#3832</i></span>
             <br><br>
-            &nbsp<img src="images/images/octogorilla.png" height="150">
+            &nbsp<img src="images/octogorilla.png" height="150">
             <br><br>
             &nbsp;This website uses a free CSS template from <a href="http://themekings.net/" target="_new">ThemeKings.net</a>
             <br><br>
