--- a/gaylist.html
+++ b/gaylist.html
@@ -57,10 +57,9 @@
 		<div class="navfill">
 			<div class="navinfo">
 
-				&nbsp;"You depend on our <br>&nbsp; protection!"
-				<br>
-				<br>
-				<br>
+        &nbsp;It's the Gummibär album <br>&nbsp;cover!
+        <br><br>
+
 
 			</div>
 		</div>
