--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">The Art Portal lives - 2021.1.5</div>
+  			<div class="topictitle">Preview to the Art Portal - 2021.1.5</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
