--- a/art.html
+++ b/art.html
@@ -79,15 +79,15 @@
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
-  					&nbsp;<a href="https://octaviomaury.github.io/artportaldeagle.html" target="_new"><img src="images/artportal/deagleicon.png" height="100"></a>
-            &nbsp;<a href="https://octaviomaury.github.io/artportalwhatareyougay.html" target="_new"><img src="images/artportal/whatareyougayicon.png" height="100"></a>
-            &nbsp;<a href="https://octaviomaury.github.io/artportalshambler.html" target="_new"><img src="images/artportal/shamblericon.png" height="100"></a>
-            &nbsp;<a href="https://octaviomaury.github.io/artportaldoomguy.html" target="_new"><img src="images/artportal/doomguyicon.png" height="100"></a>
-            &nbsp;<a href="https://octaviomaury.github.io/artportalatomix.html" target="_new"><img src="images/artportal/atomixiconicon.png" height="100"></a>
-            &nbsp;<a href="https://octaviomaury.github.io/artportaloctosmall.html" target="_new"><img src="images/artportal/octosmallicon.png" height="100"></a>
+  					&nbsp;<a href="https://octaviomaury.github.io/artportaldeagle.html"><img src="images/artportal/deagleicon.png" height="100"></a>
+            &nbsp;<a href="https://octaviomaury.github.io/artportalwhatareyougay.html"><img src="images/artportal/whatareyougayicon.png" height="100"></a>
+            &nbsp;<a href="https://octaviomaury.github.io/artportalshambler.html"><img src="images/artportal/shamblericon.png" height="100"></a>
+            &nbsp;<a href="https://octaviomaury.github.io/artportaldoomguy.html"><img src="images/artportal/doomguyicon.png" height="100"></a>
+            &nbsp;<a href="https://octaviomaury.github.io/artportalatomix.html"><img src="images/artportal/atomixiconicon.png" height="100"></a>
+            &nbsp;<a href="https://octaviomaury.github.io/artportaloctosmall.html"><img src="images/artportal/octosmallicon.png" height="100"></a>
             <br><br>
-            &nbsp;<a href="https://raw.githubusercontent.com/OctavioMaury/octaviomaury.github.io/main/images/artportal/fury.gif" target="_new"><img src="images/artportal/furyicon.png" height="100"></a>
-            &nbsp;<a href="https://raw.githubusercontent.com/OctavioMaury/octaviomaury.github.io/main/images/artportal/quakeliveinstagib.png" target="_new"><img src="images/artportal/quakeliveinstagibicon.png" height="100"></a>
+            &nbsp;<a href="https://raw.githubusercontent.com/OctavioMaury/octaviomaury.github.io/main/images/artportal/fury.gif"><img src="images/artportal/furyicon.png" height="100"></a>
+            &nbsp;<a href="https://raw.githubusercontent.com/OctavioMaury/octaviomaury.github.io/main/images/artportal/quakeliveinstagib.png"><img src="images/artportal/quakeliveinstagibicon.png" height="100"></a>
 
 
 
