--- a/art.html
+++ b/art.html
@@ -52,19 +52,7 @@
 		<div class="navfooter"></div>
 	</div>
 
-	<div class="navbox">
-		<div class="navhead">Quip of the Day</div>
-		<div class="navfill">
-			<div class="navinfo">
 
-        &nbsp;It's the Gummibär album <br>&nbsp;cover!
-        <br><br>
-
-
-			</div>
-		</div>
-		<div class="navfooter"></div>
-	</div>
 
 
 </div>
@@ -86,8 +74,9 @@
             &nbsp;<a href="https://octaviomaury.github.io/artportalatomix.html"><img src="images/artportal/atomixiconicon.png" height="100"></a>
             &nbsp;<a href="https://octaviomaury.github.io/artportaloctosmall.html"><img src="images/artportal/octosmallicon.png" height="100"></a>
             <br><br>
-            &nbsp;<a href="https://raw.githubusercontent.com/OctavioMaury/octaviomaury.github.io/main/images/artportal/fury.gif"><img src="images/artportal/furyicon.png" height="100"></a>
-            &nbsp;<a href="https://raw.githubusercontent.com/OctavioMaury/octaviomaury.github.io/main/images/artportal/quakeliveinstagib.png"><img src="images/artportal/quakeliveinstagibicon.png" height="100"></a>
+            &nbsp;<a href="https://octaviomaury.github.io/artportalfury.html"><img src="images/artportal/furyicon.png" height="100"></a>
+                        &nbsp;<a href="https://octaviomaury.github.io/artportalawake.html"><img src="images/artportal/awakeicon.png" height="100"></a>
+            &nbsp;<a href="https://octaviomaury.github.io/artportalquakelive.html"><img src="images/artportal/quakeliveinstagibicon.png" height="100"></a>
 
 
 
