--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <link href="military/themecss.css" rel="stylesheet" type="text/css" media="all">
   <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+ .colortext {
+   color:#8d8d6A;
+ }
+</style>
 </head>
 
 <div id="bodycontainer">
@@ -57,7 +62,7 @@
 		<div class="navfill">
 			<div class="navinfo">
 
-        &nbsp;It's the Gummibär album <br>&nbsp;cover!
+        <span class="colortext">&nbsp;I love Qutebrowser!</span>
         <br><br>
 
 
