--- a/art.html
+++ b/art.html
@@ -63,7 +63,7 @@
 
   <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Art Portal - 2021</div>
+  			<div class="topictitle">2021 Art</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
@@ -85,6 +85,23 @@
   			</div>
   		<div class="topicfoot"></div>
   	</div>
+  	
+  <div class="topicmenu">
+  		<div class="toptop">
+  			<div class="topictitle">2020 Art</div>
+  		</div>
+  			<div class="topicmid">
+  				<div class="topicinfo">
+  					&nbsp;<a href="https://octaviomaury.github.io/artportaltouchdaughter.html"><img src="images/artportal/touchdaughtericon.png" height="100"></a>
+     
+
+
+
+
+  					</div>
+  			</div>
+  		<div class="topicfoot"></div>
+  	</div>  	
 
   </div>
 
