--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<div class="navfill">
 			<div class="navinfo">
 
-        <span class="colortext">&nbsp;I love Qutebrowser!</span>
+        <span class="colortext">&nbsp;stfu im listening to <br> &nbsp;dementia</span>
         <br><br>
 
 
@@ -77,6 +77,10 @@
 
 
 <div id="COL-right">
+
+
+
+
 
   <div class="topicmenu">
   		<div class="toptop">
