--- a/gaylist.html
+++ b/gaylist.html
@@ -68,6 +68,7 @@
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul>
+  				<li>Nintendo</li>
               <li>Jeff Bezos</li>
               <li>Amazon</li>
               <li>Coca-Cola</li>
