--- a/gaylist.html
+++ b/gaylist.html
@@ -68,6 +68,8 @@
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul>
+  					
+  					<li>Pyronator</li>
   				<li>Nintendo</li>
               <li>Jeff Bezos</li>
               <li>Amazon</li>
