--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<div class="navfill">
 			<div class="navinfo">
 
-        <span class="colortext">&nbsp;No it's not.</span>
+        <span class="colortext">&nbsp;"Blue colored, and knows<br>&nbsp; how to handle the ladies."</span>
         <br><br>
 
 
