changed quip of the day to 'octomonster.png'

--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-
-        <span class="colortext">&nbsp;"Blue colored, and knows<br>&nbsp; how to handle the ladies."</span>
-        <br><br>
+<div align="center">
+        <img src="images/octomonster.png" height="110">
+</div>
+        
 
 
 			</div>
