--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
 
 
 	<div class="navbox">
-		<div class="navhead">Links</div>
-		<div class="navfill">
-		<div class="navinfo">
-			<div class="nav-menu">
+		<div class="navhead">Links</div> <div class="navfill"> <div class="navinfo"> <div class="nav-menu">
 				<ul>
 					<li><a href="https://octo.newgrounds.com/" target="_new">Newgrounds</a></li>
 					<li><a href="https://www.youtube.com/channel/UC4ud3m2IHZ0P1o7UNg6cPMA" target="_new">Youtube</a></li>
@@ -61,9 +58,8 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-<div align="center">
-        <img src="images/octomonster.png" height="110">
-</div>
+				&nbsp;<span class="colortext">подписаться на больше <br>&nbsp;контента червя</span>
+
         
 
 
