--- a/art.html
+++ b/art.html
@@ -93,7 +93,7 @@
   			<div class="topicmid">
   				<div class="topicinfo">
   					&nbsp;<a href="https://octaviomaury.github.io/artportaltouchdaughter.html"><img src="images/artportal/touchdaughtericon.png" height="100"></a>
-     
+     					&nbsp;<a href="https://octaviomaury.github.io/artportalfunkyparty.html"><img src="images/artportal/funkypartyicon.png" height="100"></a>
 
 
 
