--- a/gaylist.html
+++ b/gaylist.html
@@ -63,12 +63,13 @@
 
   <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Things I Think Are Gay - 2021.3.5</div>
+  			<div class="topictitle">Things I Think Are Gay - 2021.9.5</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
-  					<ul>
-  					
+  					<ul id="gaylist">
+		<li>Thrasher Magazine</li>			
+  					<li>Alien Homonid loose disc for Gamecube</i>
   					<li>Pyronator</li>
   				<li>Nintendo</li>
               <li>Jeff Bezos</li>
