updated 'Quip of The Day' on index.html and added 2 items to <ul id="gaylist"> on gaylist.html
On index.html, 'Quip of The Day' now says "amog us" and added 2 items to <ul id="gaylist"> on gaylist.html, "Saturday Night Live" and "Jojo's Bizzare Adventure"

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				&nbsp;<span class="colortext">подписаться на больше <br>&nbsp;контента червя</span>
+				&nbsp;<span class="colortext">amog us</span>
 
         
 
