lol forgolt to add gaylist.html last time

--- a/gaylist.html
+++ b/gaylist.html
@@ -68,6 +68,8 @@
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul id="gaylist">
+						<li>Jojo's Bizzare Adventure</li>
+						<li>Saturday Night Live</li>
 		<li>Thrasher Magazine</li>			
   					<li>Alien Homonid loose disc for Gamecube</i>
   					<li>Pyronator</li>
