added description to octopixel.html

--- a/artportaloctopixel.html
+++ b/artportaloctopixel.html
@@ -65,7 +65,10 @@
                                 <div class="topicinfo">
                                 <div align="center">
                                         &nbsp; <img src="images/artportal/octopixel.png" height="355">
-                                        </div>
+				</div>
+					<span class="colortext">&nbsp;Something a little different than usual.<br>&nbsp;I've kind of been feeling crummy about my prospects as an
+						animator recently. <br>&nbsp;Been feeling uninispired artistically, I figured I should do somethin different to get outta my rut.</span>
+                                        
 
                                         </div>
                         </div>
