--- a/artportaloctopixel.html
+++ b/artportaloctopixel.html
@@ -68,7 +68,7 @@
 				</div>
 					<span class="colortext">&nbsp;Something a little different than usual.<br>&nbsp;I've kind of been feeling crummy about my prospects as an
 						animator recently. <br>&nbsp;Been feeling uninispired artistically, I figured I should do somethin different to get outta my rut.</span>
-                                        
+					<!--yes I know I sound like a whiny pretentious faggot, GET OFF MY BACK BRO--> 
 
                                         </div>
                         </div>
