updated gaylist.html and index.html
index's quip of the day now says "rubios grill sucks <br> my teacher wants me to watch wandavision" and added rubios coastal grill to <ul id="gaylist"> to gaylist.html

--- a/gaylist.html
+++ b/gaylist.html
@@ -68,6 +68,7 @@
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul id="gaylist">
+				<li>rubio's COASTAL GRILL</li>
 						<li>Jojo's Bizzare Adventure</li>
 						<li>Saturday Night Live</li>
 		<li>Thrasher Magazine</li>			
