--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				&nbsp;<span class="colortext">amog us</span>
+				&nbsp;<span class="colortext">rubio's grill sucks
+
+					<br><br> &nbsp;my teacher wants me to <br>&nbsp;watch wandavision</span>
 
         
 
