--- a/artportallinux.html
+++ b/artportallinux.html
@@ -69,7 +69,7 @@
                                 </div>
 				<br><br>
 				<span class="colortext">&nbsp;Thanks to Sage for exportin this shit</span>
-
+                               	<!--boy, I sounded like a faggot in that last one-->
                                         </div>
                         </div>
                 <div class="topicfoot"></div>
