wrote blog post

--- a/index.html
+++ b/index.html
@@ -78,6 +78,37 @@
 <div id="COL-right">
 
 
+ <div class="topicmenu">
+                <div class="toptop">
+                        <div class="topictitle">Vim is pretty cool - 2021.9.5</div>
+                </div>
+                        <div class="topicmid">
+                                <div class="topicinfo">
+					&nbsp;My friend told me that Vim is cool text editor,
+					so I checked it out and it turns out that it is actually pretty cool.
+					&nbsp;I'm gonna be doin all my html shenanigans on NeoVim from now on.
+					&nbsp;If you don't know what Vim is, it's a text &nbsp;editor that runs entirely from the Linux terminal,
+					so it's very lightweight and very quick.
+					<br><br>
+					&nbsp;<a href="https://www.vim.org/download.php" target="_new" >Download Vim here.</a>
+					<br><br>
+					&nbsp;(I actually don't know how it works on Windows, I'm pretty sure it opens up a GUI. CRINGE!!!)
+					<br><br>
+					&nbsp;So, uhh get Artix Linux because Windows gay, use Vim for text editing, and I'll get to work on 
+					the Movie Portal &nbsp;sometime maybe.
+					<br><br>
+					&nbsp;<a href="https://octaviomaury.github.io/artportallinux.html">
+						<img src="images/artportal/linux.gif" height="160"></a>
+
+            <br><br>
+            &nbsp;Cheers.
+                                        </div>
+                                <div class="topicsignature">Octo-</div>
+                        </div>
+                <div class="topicfoot"></div>
+        </div>
+
+
 
 
 
