--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				&nbsp;<span class="colortext">rubio's grill sucks
-
-					<br><br> &nbsp;my teacher wants me to <br>&nbsp;watch wandavision</span>
+				&nbsp;<span class="colortext">I like when girls are sexy &nbsp;and beautiful and smile at &nbsp;me</span>
 
         
 
