--- a/gaylist.html
+++ b/gaylist.html
@@ -63,11 +63,12 @@
 
   <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Things I Think Are Gay - 2021.9.5</div>
+  			<div class="topictitle">Things I Think Are Gay - 2021.10.5</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul id="gaylist">
+				<li>TBigTexasTony</li>
 				<li>rubio's COASTAL GRILL</li>
 						<li>Jojo's Bizzare Adventure</li>
 						<li>Saturday Night Live</li>
