--- a/gaylist.html
+++ b/gaylist.html
@@ -68,7 +68,7 @@
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul id="gaylist">
-				<li>TBigTexasTony</li>
+				<li>BigTexasTony</li>
 				<li>rubio's COASTAL GRILL</li>
 						<li>Jojo's Bizzare Adventure</li>
 						<li>Saturday Night Live</li>
