--- a/gaylist.html
+++ b/gaylist.html
@@ -81,7 +81,7 @@
 				<li>Persona</li>	
 				<li>Postal 3</li>
 				<li>Unreal Tournament</li>
-				<li>Redneck Romero</li>
+				<li>Redneck Rampage</li>
 				<li>Israel</li>
 				<li>Friday Night Funkin</li>
 				<li>Big Brother</li>
