--- a/gaylist.html
+++ b/gaylist.html
@@ -70,7 +70,7 @@
   					<ul id="gaylist">
 				
 				
-
+				<li>Hazbin Hotel</li>
 				<li>Modern Fallout games</li>
 				<li>Twitch</li>
 				<!--all my homies hate twitch-->
