--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				&nbsp;<span class="colortext">"they got me for my foams!"</span>
+				&nbsp;<span class="colortext">"Ever wonder why we're here?"</span>
 
         
 
