--- a/gaylist.html
+++ b/gaylist.html
@@ -62,13 +62,18 @@
 
   <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Things I Think Are Gay - 2021.10.5</div>
+  			<div class="topictitle">Things I Think Are Gay - 2021.12.5</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul id="gaylist">
 				
 				
+				<li>New California Republic</li>
+				<!--FUCK THE NCR!!-->
+				<li>Chinese robot birds</li>
+				<li>Clarinet</li>
+				<li>Michigan water</li>
 				<li>Hazbin Hotel</li>
 				<li>Modern Fallout games</li>
 				<li>Twitch</li>
