--- a/gaylist.html
+++ b/gaylist.html
@@ -28,6 +28,8 @@
 					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
 					<li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
 					<li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
+					<li><a href="https://octaviomaury.github.io/blogposts.html">Blog Posts</a></li>
+
 				</ul>
 			</div>
 		</div>
@@ -68,7 +70,7 @@
   				<div class="topicinfo">
   					<ul id="gaylist">
 				
-				
+				<li>Javascript</li>
 				<li>New California Republic</li>
 				<!--FUCK THE NCR!!-->
 				<li>Chinese robot birds</li>
@@ -132,8 +134,8 @@
               <li>Neon Genesis Evangelion</li>
               <li>Lobstermango</li>
               <li>StaggerNight</li>
-              <li>Crunchy tacos</li>
-              <li>The Royal Family</li>
+	      <li>Crunchy tacos</li>
+	      <li>The Royal Family</li>
               <li>BioShock Infinite</li>
               <li>M16</li>
               <li>TikTok</li>
@@ -153,8 +155,8 @@
               <li>Blood 2: The Chosen</li>
               <li>ToonBoom</li>
               <li>League Of Legends</li>
-              <li>Your dad lmao</li>
-              <li>Discord</li>
+	      <li>Your dad lmao</li>
+	      <li>Discord</li>
               <li>Chinese government</li>
               <li>/vt/</li>
               <li>Twitter</li>
