--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
 					<li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
 					<li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
+					<li><a href="https://octaviomaury.github.io/blogposts.html">Blog Posts</a></li>
 				</ul>
 			</div>
 		</div>
@@ -57,7 +58,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				&nbsp;<span class="colortext">I met my wife on Club &nbsp;Penguin</span>
+				&nbsp;<span class="colortext">Octo lives in my walls</span>
 
         
 
