--- a/about.html
+++ b/about.html
@@ -33,6 +33,8 @@
 					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
 					<li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
 					<li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
+					<li><a href="https://octaviomaury.github.io/blogposts.html">Blog Posts</a></li>
+
 				</ul>
 			</div>
 		</div>
