--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 			<div class="nav-menu">
 				<ul>
 					<li><a href=" https://octaviomaury.github.io/index.html ">Home</a></li>
-          <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal (WIP)</a></li>
+ 	 			        <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal (WIP)</a></li>
+						<!--wow, I am just lazy son of a bitch arent I? I swear Movie Portal will be up by June :)-->
 					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
 					<li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
 					<li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
