--- a/blogvimcool.html
+++ b/blogvimcool.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>Preview to The Art Portal</title>
+  <title>Vim is pretty cool</title>
   <link href="themecss.css" rel="stylesheet" type="text/css" media="all">
   <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
- .colortext {
+    <style>      
+ .colortext {    
    color:#8d8d6A;
  }
 </style>
@@ -50,25 +50,38 @@
 
     <div class="topicmenu">
                 <div class="toptop">
-                        <div class="topictitle">Preview to The Art Portal - 2021.1.5</div>
+                        <div class="topictitle">Vim is pretty cool - 2021.9.5</div>
                 </div>
                         <div class="topicmid">
                                 <div class="topicinfo">
 
-   					&nbsp;Art Portal coming soon. I'm workin' on it!
+
+					&nbsp;My friend told me that Vim is cool text editor,
+					so I checked it out and it turns out that it is actually pretty cool.
+					&nbsp;I'm gonna be doin all my html shenanigans on NeoVim from now on.
+					&nbsp;If you don't know what Vim is, it's a text &nbsp;editor that runs entirely from the Linux terminal,
+					so it's very lightweight and very quick.
+					<br><br>
+					&nbsp;<a href="https://www.vim.org/download.php" target="_new" >Download Vim here.</a>
+					<br><br>
+					&nbsp;(I actually don't know how it works on Windows, I'm pretty sure it opens up a GUI. CRINGE!!!)
+					<br><br>
+					&nbsp;So, uhh get Artix Linux because Windows gay, use Vim for text editing, and I'll get to work on 
+					the Movie Portal &nbsp;sometime maybe.
+					<br><br>
+					&nbsp;<a href="https://octaviomaury.github.io/artportallinux.html">
+						<img src="images/artportal/linux.gif" height="160"></a>
+
             <br><br>
-            &nbsp;Here's a screenshot of what I got so far in the meantime.
-            <br><br>
-            &nbsp;  <img src="images/artportalsneakpeek.png" height="150">
-            <br><br>
-            &nbsp;Happy Pico Day, by the way! Long live Newgrounds!                               
+            &nbsp;Cheers.
+
 
                                         </div>
-				<div class="topicsignature">Octo-</div>
+                                <div class="topicsignature">Octo-</div>
                         </div>
                 <div class="topicfoot"></div>
 
     </div></div>
 
         <div class="foot"></div>
- 
+
