--- a/blogposts.html
+++ b/blogposts.html
@@ -62,7 +62,7 @@
 
     <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">New Look to Site #winning - 2021.30.4</div>
+  			<div class="topictitle">Blog Posts - 2021.9.5</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
