--- a/blogposts.html
+++ b/blogposts.html
@@ -62,7 +62,7 @@
 
     <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Blog Posts - 2021.9.5</div>
+  			<div class="topictitle">Blog Posts - 2021.13.5</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
@@ -70,6 +70,9 @@
                                         
 
 
+
+			<li><a href="https://octaviomaury.github.io/blog-blogpostarchive.html">Blog Post Archive - 2021.13.5</a></li>
+			<!--hey, how are ya?-->
                         <li><a href="https://octaviomaury.github.io/blogvimcool.html">Vim is pretty cool - 2021.9.5</a></li>    
                         <li><a href="https://octaviomaury.github.io/blogartportallives.html">The Art Portal Lives! - 2021.1.5
                         <li><a href="https://octaviomaury.github.io/blogpreviewartportal.html">Preview to The Art Portal - 2021.1.5</a></li>
