--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<ul>
 					<li><a href=" https://octaviomaury.github.io/index.html ">Home</a></li>
  	 			        <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal (WIP)</a></li>
-						<!--wow, I am just lazy son of a bitch arent I? I swear Movie Portal will be up by June :)-->
+		<!--wow, I am just lazy son of a bitch arent I? I swear the Movie Portal will be at least accessible by next month :)-->
 					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
 					<li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
 					<li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
@@ -78,6 +78,43 @@
 
 
  <div class="topicmenu">
+                <div class="toptop">
+                        <div class="topictitle">Blog Post Archive - 2021.13.5</div>
+                </div>
+                        <div class="topicmid">
+                                <div class="topicinfo">
+				&nbsp;I made a brand-new page on the site. Check it out!
+				<br>
+				&nbsp;<a href="https://octaviomaury.github.io/blogposts.html">https://octaviomaury.github.io/blogposts.html</a>
+				<br><br>
+				&nbsp;Very early on in the redesigning of my site, I realized that after a while, the Blog Posts would probably
+				take up &nbsp;a lot of space on the homepage, and that would probably be a pain in the ass for anyone
+				with slow internet.
+				<br><br>
+				&nbsp;So, making <a href="https://octaviomaury.github.io/blogposts.html">an archive</a> for blog posts has been on my mind for a while now. Turns out it was extraordinarily
+				&nbsp;easy to do.
+				<br><br>
+				&nbsp;<img src="images/vimscreenshot.png" alt="vimscreenshot.png" height="160">
+				<br><br>
+				&nbsp;Pretty much everything about making a website is deceptively easy to do.
+				<br><br>
+				&nbsp;So, from now on only 3 blog posts will be shown on the homepage, and if you wanna read older posts,
+				just go &nbsp;through <a href="https://octaviomaury.github.io/blogposts.html">The Archives</a>
+				<br><br>
+				&nbsp;Another cool thing this new archive allows for is easier sharing, as each post now has it's own url.
+				<!--idk why you'd wanna share my posts but whatever-->
+				<br><br>
+				&nbsp;Errrrm that's about it.				
+				<br><br>
+            &nbsp;Cheers.
+                                        </div>
+                                <div class="topicsignature">Octo-</div>
+                        </div>
+                <div class="topicfoot"></div>
+        </div>
+
+
+	<div class="topicmenu">
                 <div class="toptop">
                         <div class="topictitle">Vim is pretty cool - 2021.9.5</div>
                 </div>
@@ -157,24 +194,6 @@
 
 
 
-  <div class="topicmenu">
-  		<div class="toptop">
-  			<div class="topictitle">New Look to Site #winning - 2021.30.4</div>
-  		</div>
-  			<div class="topicmid">
-  				<div class="topicinfo">
-  					&nbsp;Old look was gay and ugly. I found a css. template online, and it had an old-school Newgrounds look and <br> &nbsp;thought it was epic. <br>
-            <br>
-            &nbsp;I'm gonna have more stuff on here soon. Hope you like it, boys.
-            <br><br>
-            &nbsp;And if you don't like the new look, the old one is on the <a href="http://web.archive.org/web/*/https://octaviomaury.github.io/index.html" target="_new">WayBack Machine</a>, so fuck off over there.
-            <br><br>
-            &nbsp;  <img src="images/hacking.gif" height="150">
-  					</div>
-  				<div class="topicsignature">Octo-</div>
-  			</div>
-  		<div class="topicfoot"></div>
-  	</div>
 
   </div>
 
