--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				&nbsp;<span class="colortext">Octo lives in my walls</span>
-
-        
-
+				&nbsp;<span class="colortext">"Sorry Mr. Utting, I did a &nbsp;couple drawings on the
+					<br> &nbsp;test"</span>
 
 			</div>
 		</div>
