--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				&nbsp;<span class="colortext">"Sorry Mr. Utting, I did a &nbsp;couple drawings on the
-					<br> &nbsp;test"</span>
+				&nbsp;<span class="colortext">I left my wife to check out &nbsp;the Chernobyl exclusion &nbsp;zone.</span>
 
 			</div>
 		</div>
