--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				&nbsp;<span class="colortext">"Hey railroad ass!"</span>
+				&nbsp;<span class="colortext">Ever heard of fried rice?</span>
 
 			</div>
 		</div>
