--- a/gaylist.html
+++ b/gaylist.html
@@ -64,12 +64,21 @@
 
   <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Things I Think Are Gay - 2021.12.5</div>
+  			<div class="topictitle">Things I Think Are Gay - 2021.16.5</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul id="gaylist">
-				
+				<li>Microsoft</li>
+				<li>Apple</li>		
+				<li>Dr. Phil</li>		
+				<li>Brawl Stars</li>	
+				<li>Unity</li>
+				<li>Darkplaces engine</li>
+				<li>Worms Rumble</li>
+				<li>Furries</li>
+				<li>Dream</li>
+				<li>Reddit</li>
 				<li>Javascript</li>
 				<li>New California Republic</li>
 				<!--FUCK THE NCR!!-->
