--- a/gaylist.html
+++ b/gaylist.html
@@ -64,11 +64,19 @@
 
   <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Things I Think Are Gay - 2021.16.5</div>
+  			<div class="topictitle">Things I Think Are Gay - 2021.18.5</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul id="gaylist">
+
+				<li>Sugar in coffee</li>
+				<li>KryptoKat</li>	
+				<li>Starbomb</li>	
+				<li>Portuguese</li>
+				<li>RPG Anims</li>
+				<li>luis</li> 		
+				<li>Israel</li>
 				<li>Microsoft</li>
 				<li>Apple</li>		
 				<li>Dr. Phil</li>		
