--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				&nbsp;<span class="colortext">Violence is cool</span>
+				&nbsp;<span class="colortext">Don't you have minorities to &nbsp;opress right now?</span>
 
 			</div>
 		</div>
