--- a/gaylist.html
+++ b/gaylist.html
@@ -64,12 +64,14 @@
 
   <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Things I Think Are Gay - 2021.18.5</div>
+  			<div class="topictitle">Things I Think Are Gay - 2021.21.5</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul id="gaylist">
-
+				<li>Plant cells</li>
+				<li>The Sviet Union</li> 		
+				<li>Corona Virus</li>
 				<li>Sugar in coffee</li>
 				<li>KryptoKat</li>	
 				<li>Starbomb</li>	
