--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 				<ul>
 					<li><a href=" https://octaviomaury.github.io/index.html ">Home</a></li>
  	 			        <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal (WIP)</a></li>
-		<!--wow, I am just lazy son of a bitch arent I? I swear the Movie Portal will be at least accessible by next month :)-->
 					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
 					<li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
 					<li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
@@ -59,7 +58,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				&nbsp;<span class="colortext">Don't you have minorities to &nbsp;opress right now?</span>
+				&nbsp;<span class="colortext">"boohoo, im so sad"</span>
 
 			</div>
 		</div>
