--- a/gaylist.html
+++ b/gaylist.html
@@ -70,7 +70,8 @@
   				<div class="topicinfo">
   					<ul id="gaylist">
 				<li>Plant cells</li>
-				<li>The Sviet Union</li> 		
+				<li>The Soviet Union</li> 		
+				<li>V-tuber</li>
 				<li>Corona Virus</li>
 				<li>Sugar in coffee</li>
 				<li>KryptoKat</li>	
