--- a/movieportaldonnytrump.html
+++ b/movieportaldonnytrump.html
@@ -3,7 +3,7 @@
    <html lang="en" dir="ltr"><head>
    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
      <meta charset="utf-8">
-     <title>Doodles 001</title>
+     <title>Donny Trump is silly</title>
      <link href="themecss.css" rel="stylesheet" type="text/css" media="all">
      <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
      <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@
                           <div class="nav-menu">
                                   <ul>
                                           <li><a href=" https://octaviomaury.github.io/index.html ">Home</a></li>
-            <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal (WIP)</a></li>
+            			        	<li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal (WIP)</a></li>
                                           <li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
                                           <li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
                                           <li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
@@ -47,8 +47,7 @@
                   <div class="navfill">
                   <div class="navinfo">
                           <div class="nav-menu">
-                                  <span class="colortext">&nbsp;2021.20.5</span>  
-				<!--actually, only the first one was drawn on the 20th, the second one was drawn on the 19th-->
+                                  <span class="colortext">&nbsp;2020.27.10</span>
                           </div>
                   </div>
                   </div>
@@ -62,28 +61,22 @@
   
     <div class="topicmenu">
                   <div class="toptop">
-                          <div class="topictitle">Doodles 001</div>
+                          <div class="topictitle">Donny Trump is silly</div>
                  </div>
                           <div class="topicmid">
                                  <div class="topicinfo">
                                   <div align="center">
-					 &nbsp; <img src="images/artportal/utting.jpg" height="530" alt="utting">
-					 <br>
-                                        &nbsp; <img src="images/artportal/quakehellknight.jpg" height="530" alt="quakehellknight">
+					<video height="360" controls>
+    					<source src="images/movieportal/donaldtrump.mkv" type="video/mp4">
+					</video>
                                   </div>
-				  <br><br>
-
-				  <span class="colortext">  &nbsp;im gonna be posting more doodles and half-assed content on here. This being my personal website, i dont need &nbsp;to abide by any Newgrounds laws, so don't expect quality control on here. Welcome to the jungle, bitch.</span>
-
- <!--CONTEXT: the first picture is a drawing of my science teacher, he's pretty gay. the second is of the Hell Knight enemy in Quake 1. Both were drawn during said science class in my sketchbook, and photos were taken by my shitty boomer-phone.-->
-                                  </div>
-
                                           </div>
+                          </div>
                   <div class="topicfoot"></div>
           </div>
   
     </div>
   
   
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
-   <div class="foot"></div>   
+    <div class="clearB"></div> 
+    <div class="foot"></div>   
